--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,14 @@ label {
   font-size: 24px;
   font-weight: 500;
 }
+
+alert {
+  color: red;
+}
+h1 {
+  display: flex;
+  font-weight: bold;
+}
+img {
+  width: 470px;
+}
